Add new folder along with a picture
New folder is called 'img' where i will put the
pictures of the finished recipes, and i modified
pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,30 @@
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="../img/pizza.jpg" alt="pizza">
+    <p>
+        <strong>Pizza</strong>,a dish of Italian origin consisting of a flattened disk of bread dough 
+        topped with some combination of olive oil, oregano, tomato, olives, mozzarella or 
+        other cheese, and many other ingredients, baked quickly—usually, in a commercial setting,
+         using a wood-fired oven heated to a very high temperature—and served hot.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Olive oil</li>
+        <li>Oregano</li>
+        <li>Tomato sauce</li>
+        <li>Mozzarella</li>
+        <li>Dough</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the dough</li>
+        <li>Shred mozzarella cheese</li>
+        <li>Make tomato sauce</li>
+        <li>Make the dough into a thin disc shape</li>
+        <li>Put tomato sauce and cheese on the dough in that order</li>
+        <li>Put in the oven for 10 minutes</li>
+        <li>Enjoy the pizza!</li>
+    </ol>
 </body>
 </html>
