Add 2 new recipes and links
Added 2 new recipes with the same framework
as the first one, also added links to homepage
on the recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -33,5 +33,6 @@
         <li>Put in the oven for 10 minutes</li>
         <li>Enjoy the pizza!</li>
     </ol>
+    <a href="../index.html">Homepage</a>
 </body>
 </html>
