--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <ul>
+        <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="./recipes/grilled-steak.html">Grilled Steak Recipe</a></li>
+        <li><a href="./recipes/hamburger.html">Hamburger Recipe</a></li>
+    </ul> 
 </body>
 </html>
