Some simple modifications

--- a/recipes/grilled-steak.html
+++ b/recipes/grilled-steak.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Steak Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Grilled Steak</h1>
@@ -17,7 +18,7 @@
         as hamburgers.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul >
         <li>Olive oil</li>
         <li>Boneless rib eye, or New York strip steaks, or fillet mignons</li>
         <li>Kosher Salt</li>
@@ -31,6 +32,6 @@
         <li>Turn the steaks over and continue to grill 3 to 5 minutes for medium-rare</li>
         <li>Transfer the steaks to a cutting board or platter, tent loosely with foil and let rest 5 minutes before slicing.</li>
     </ol>
-    <a href="../index.html">Homepage</a>
+    <a class="link" href="../index.html">Homepage</a>
 </body>
 </html>
