--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Pizza</h1>
@@ -33,6 +34,6 @@
         <li>Put in the oven for 10 minutes</li>
         <li>Enjoy the pizza!</li>
     </ol>
-    <a href="../index.html">Homepage</a>
+    <a class="link"href="../index.html">Homepage</a>
 </body>
 </html>
