--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-        <li><a href="./recipes/grilled-steak.html">Grilled Steak Recipe</a></li>
-        <li><a href="./recipes/hamburger.html">Hamburger Recipe</a></li>
+    <img src="./img/chef.avif">
+    <ul class="home-links">
+        <li><a class="link" href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a class="link" href="./recipes/grilled-steak.html">Grilled Steak Recipe</a></li>
+        <li><a class="link" href="./recipes/hamburger.html">Hamburger Recipe</a></li>
     </ul> 
 </body>
 </html>
