--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Hamburger</h1>
@@ -31,6 +32,6 @@
         <li>Cook patties on the preheated grill until no longer pink in the center and the juices run clear, about 4 to 5 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
         <li>Assemble the burger and enjoy!</li>
     </ol>
-    <a href="../index.html">Homepage</a>
+    <a class="link" href="../index.html">Homepage</a>
 </body>
 </html>
