--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="./img/chef.avif">
-    <ul class="home-links">
-        <li><a class="link" href="./recipes/pizza.html">Pizza Recipe</a></li>
-        <li><a class="link" href="./recipes/grilled-steak.html">Grilled Steak Recipe</a></li>
-        <li><a class="link" href="./recipes/hamburger.html">Hamburger Recipe</a></li>
-    </ul> 
+    <h1 class="home-title">Odin Recipes</h1>
+    <!-- <img src="./img/chef.avif"> -->
+
+    <div class="container">
+       
+            <div class="image pizza">
+                <a class="link" href="./recipes/pizza.html">Pizza Recipe</a>
+            </div>
+            <div class="image burger">
+                <a class="link" href="./recipes/hamburger.html">Hamburger Recipe</a>
+            </div>
+            <div class="image steak">
+                <a class="link" href="./recipes/grilled-steak.html">Grilled Steak Recipe</a>
+            </div>
+
+    </div>
 </body>
 </html>
